--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>P5js and Data Viz</title>
+  <base href="%PUBLIC_URL%/">
+
 </head>
 
 <body>
